# PyStory

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: docker-build-push.yml
pystory/: __init__.py  __main__.py  book_manager.py  media_manager.py  story_generator.py
pystory/tests/: __init__.py  test_book_manager.py  test_media_manager.py  test_story_generator.py
terraform/: README.md  auth.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
